[package]
name = "goudale"
version = "0.1.0"
edition = "2021"
description = "A typed scientific calculator"
license = "WTFPL"
repository = "https://github.com/irevoire/goudale"
keywords = ["calculator", "type"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"
logos = "0.12.1"
thiserror = "1.0.31"
anyhow = "1.0.56"
atty = "0.2.14"
miette = { version = "4.7.1", features = ["fancy"] }
